blocked web page

--- a/index.html
+++ b/index.html
@@ -1,65 +1,76 @@
 ﻿<!DOCTYPE html>
 <html lang="ua">
-	<head>
-	<meta charset="utf-8">
-		<title>Styles Conference</title>
+<head>
+    <meta charset="utf-8">
+    	<title>Styles Conference</title>
 		<link rel="stylesheet" href="assets/stylesheets/main.css">
-	</head>
-	<body>
-		<header>
-			<h1>
-				<a href="index.html">Styles Conference</a>
-			</h1>
-			<h3>24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
-			<nav>
-				<a href="index.html">Головна</a>
-				<a href="speakers.html">Спікери</a>
-				<a href="schedule.html">Розклад</a>
-				<a href="venue.html">Місце проведення</a>
-				<a href="register.html">Реєстрація</a>
-			</nav>
-		</header>
-		<section>
-			<h2>Присвячується розробці веб-сайтів</h2>
-			<p>Щороку найуспішніші веб-дизайнери та
+</head>
+<body>
+
+<header class="container">
+        <h1>
+            <a href="index.html">Styles Conference</a>
+        </h1>
+
+    <h3>24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
+
+    <nav>
+        <a href="index.html">Головна</a>
+        <a href="speakers.html">Спікери</a>
+        <a href="schedule.html">Розклад</a>
+        <a href="venue.html">Місце проведення</a>
+        <a href="register.html">Реєстрація</a>
+    </nav>
+</header>
+
+<section class="hero container">
+    <h2>Присвячується розробці веб-сайтів</h2>
+    <p>Щороку найуспішніші веб-дизайнери та
 				фронтенд-розробники збираються в Чикаго,
 				щоб обговорити новітні технології.
 				Приєднуйся до нас у серпні цього року!</p>
-			<a href="register.html">Зареєструйтесь зараз</a>
-			<section>
-				<a href="speakers.html">
-					<h5>Спікери</h5>
-					<h3>Спікери світового рівня</h3>
-				</a>
-				<p>До нас приїде більше двадцяти професійних спікерів
+    <a class="btn btn-alt" href="register.html">Зареєструйтесь зараз</a>
+</section>
+
+    <section class="container">
+        <section>
+        <a href="speakers.html">
+            <h5>Спікери</h5>
+            <h3>Спікери світового рівня</h3>
+        </a>
+        <p>До нас приїде більше двадцяти професійних спікерів
 					з усього світу, щоб поділитися своїм досвідом</p>
-			</section>
-			<section>
-				<a href="schedule.html">
-					<h5>Розклад</h5>
-					<h3>Три незабутніх дні спілкування</h3>
-				</a>
-				<p>Насолоджуйтесь трьома надихаючими і насиченими
-					подіями днями спікінгів, зустрічей та інших подій</p>
-			</section>
-			<section>
-				<a href="venue.html">
-					<h5>Місце проведення</h5>
-					<h3>Театр Чикаго</h3>
-				</a>
-				<p>Театр Чикаго, в самому центрі міста, &#8212;
-					чудове місце проведення конференції</p>
-			</section>
-		</section>
-		<footer>
-			<small>&copy; Styles Conference</small>
-			<nav>
-				<a href="index.html">Головна</a>
-				<a href="speakers.html">Спікери</a>
-				<a href="schedule.html">Розклад</a>
-				<a href="venue.html">Місце проведення</a>
-				<a href="register.html">Реєстрація</a>
-			</nav>
-		</footer>
-	</body>
+        </section>
+
+        <section>
+        <a href="schedule.html">
+            <h5>Розклад</h5>
+            <h3>Три незабутніх дні спілкування</h3>
+        </a>
+        <p>Насолоджуйтесь трьома надихаючими і насиченими
+            подіями днями спікінгів, зустрічей та інших подій</p>
+        </section>
+
+        <section>
+        <a href="venue.html">
+            <h5>Місце проведення</h5>
+            <h3>Театр Чикаго</h3>
+        </a>
+        <p>Театр Чикаго, в самому центрі міста, &#8212;
+            чудове місце проведення конференції</p>
+        </section>
+    </section>
+
+<footer class="container">
+    <small>&copy; Styles Conference</small>
+		<nav>
+			<a href="index.html">Головна</a>
+			<a href="speakers.html">Спікери</a>
+			<a href="schedule.html">Розклад</a>
+			<a href="venue.html">Місце проведення</a>
+			<a href="register.html">Реєстрація</a>
+		</nav>
+	</footer>
+
+</body>
 </html>
