--- a/register.html
+++ b/register.html
@@ -5,12 +5,14 @@
     <title>Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
+
 <body>
-<header>
+<header class="container">
     <h1>
         <a href="index.html">Styles Conference</a>
     </h1>
     <h3>24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
+
     <nav>
         <a href="index.html">Головна</a>
         <a href="speakers.html">Спікери</a>
@@ -19,17 +21,19 @@
         <a href="register.html">Реєстрація</a>
     </nav>
 
-    <h1>Реєстрація</h1>
+    <section class="container">
+        <h1>Реєстрація</h1>
+    </section>
 
-    <footer>
-        <small>&copy; Styles Conference</small>
-        <nav>
-            <a href="index.html">Головна</a>
-            <a href="speakers.html">Спікери</a>
-            <a href="schedule.html">Розклад</a>
-            <a href="venue.html">Місце проведення</a>
-            <a href="register.html">Реєстрація</a>
-        </nav>
-    </footer>
+<footer class="container">
+    <small>&copy; Styles Conference</small>
+    <nav>
+        <a href="index.html">Головна</a>
+        <a href="speakers.html">Спікери</a>
+        <a href="schedule.html">Розклад</a>
+        <a href="venue.html">Місце проведення</a>
+        <a href="register.html">Реєстрація</a>
+    </nav>
+</footer>
 </body>
 </html>
