--- a/schedule.html
+++ b/schedule.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
     <title>Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
+
 <body>
-<header>
+<header class="container">
     <h1>
         <a href="index.html">Styles Conference</a>
     </h1>
@@ -18,17 +20,19 @@
         <a href="register.html">Реєстрація</a>
     </nav>
 
-    <h1>Розклад</h1>
+    <section class="container">
+        <h1>Розклад</h1>
+    </section>
 
-    <footer>
-        <small>&copy; Styles Conference</small>
-        <nav>
-            <a href="index.html">Головна</a>
-            <a href="speakers.html">Спікери</a>
-            <a href="schedule.html">Розклад</a>
-            <a href="venue.html">Місце проведення</a>
-            <a href="register.html">Реєстрація</a>
-        </nav>
-    </footer>
+<footer class="container">
+    <small>&copy; Styles Conference</small>
+    <nav>
+        <a href="index.html">Головна</a>
+        <a href="speakers.html">Спікери</a>
+        <a href="schedule.html">Розклад</a>
+        <a href="venue.html">Місце проведення</a>
+        <a href="register.html">Реєстрація</a>
+    </nav>
+</footer>
 </body>
 </html>
