--- a/venue.html
+++ b/venue.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-<header class="container">
-    <h1>
-        <a href="index.html">Styles Conference</a>
+<header class="container group">
+    <h1 class="logo">
+        <a href="index.html">Styles <br> Conference</a>
     </h1>
     <h3>24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
     <nav>
@@ -24,7 +24,7 @@
         <h1>Місце проведення</h1>
     </section>
 
-<footer class="container">
+<footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
     <nav>
         <a href="index.html">Головна</a>
