--- a/index.html
+++ b/index.html
@@ -32,26 +32,33 @@
     <a class="btn btn-alt" href="register.html">Зареєструйтесь зараз</a>
 </section>
 
-    <section class="container">
-        <section>
+    <section class="grid">
+
+      <!-- Спикери -->
+
+      <section class="col-1-3">
         <a href="speakers.html">
             <h5>Спікери</h5>
             <h3>Спікери світового рівня</h3>
         </a>
         <p>До нас приїде більше двадцяти професійних спікерів
 					з усього світу, щоб поділитися своїм досвідом</p>
-        </section>
+        </section><!--
 
-        <section>
+        Розклад
+
+        --><section class="col-1-3">
         <a href="schedule.html">
             <h5>Розклад</h5>
             <h3>Три незабутніх дні спілкування</h3>
         </a>
         <p>Насолоджуйтесь трьома надихаючими і насиченими
             подіями днями спікінгів, зустрічей та інших подій</p>
-        </section>
+        </section><!--
 
-        <section>
+        Місце проведення
+
+        --><section class="col-1-3">
         <a href="venue.html">
             <h5>Місце проведення</h5>
             <h3>Театр Чикаго</h3>
