--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <a href="index.html">Styles <br> Conference</a>
         </h1>
 
-    <h3>24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
+    <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
 
-    <nav>
+    <nav class="primary-nav">
         <a href="index.html">Головна</a>
         <a href="speakers.html">Спікери</a>
         <a href="schedule.html">Розклад</a>
@@ -36,7 +36,7 @@
 
       <!-- Спикери -->
 
-      <section class="col-1-3">
+      <section class="teaser col-1-3">
         <a href="speakers.html">
             <h5>Спікери</h5>
             <h3>Спікери світового рівня</h3>
@@ -47,7 +47,7 @@
 
         Розклад
 
-        --><section class="col-1-3">
+        --><section class="teaser col-1-3">
         <a href="schedule.html">
             <h5>Розклад</h5>
             <h3>Три незабутніх дні спілкування</h3>
@@ -58,7 +58,7 @@
 
         Місце проведення
 
-        --><section class="col-1-3">
+        --><section class="teaser col-1-3">
         <a href="venue.html">
             <h5>Місце проведення</h5>
             <h3>Театр Чикаго</h3>
