--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
 
-    <nav class="primary-nav">
+    <nav class="nav primary-nav">
         <a href="index.html">Головна</a>
         <a href="speakers.html">Спікери</a>
         <a href="schedule.html">Розклад</a>
@@ -70,7 +70,7 @@
 
 <footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
-		<nav>
+		<nav class="nav">
 			<a href="index.html">Головна</a>
 			<a href="speakers.html">Спікери</a>
 			<a href="schedule.html">Розклад</a>
