--- a/register.html
+++ b/register.html
@@ -11,9 +11,9 @@
     <h1 class="logo">
         <a href="index.html">Styles <br> Conference</a>
     </h1>
-    <h3>24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
+    <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
 
-    <nav>
+    <nav class="nav primary-nav">
         <a href="index.html">Головна</a>
         <a href="speakers.html">Спікери</a>
         <a href="schedule.html">Розклад</a>
@@ -27,7 +27,7 @@
 
 <footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
-    <nav>
+    <nav class="nav">
         <a href="index.html">Головна</a>
         <a href="speakers.html">Спікери</a>
         <a href="schedule.html">Розклад</a>
