backgrounds and gradients

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<header class="container group">
+<header class="primary-header container group">
         <h1 class="logo">
             <a href="index.html">Styles <br> Conference</a>
         </h1>
@@ -33,9 +33,10 @@
     <a class="btn btn-alt" href="register.html">Зареєструйтесь зараз</a>
 </section>
 
-    <section class="grid">
+  <section class="row">
+    <div class="grid">
 
-      <!-- Спикери -->
+      <!-- Спікери -->
 
       <section class="teaser col-1-3">
         <a href="speakers.html">
@@ -67,7 +68,8 @@
         <p>Театр Чикаго, в самому центрі міста, &#8212;
             чудове місце проведення конференції</p>
         </section>
-    </section>
+    </div>
+  </section>
 
 <footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
