--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<header class="container group">
+<header class="primary-header container group">
     <h1 class="logo">
         <a href="index.html">Styles <br> Conference</a>
     </h1>
@@ -22,8 +22,14 @@
         <a href="register.html">Реєстрація</a>
     </nav>
 
-    <section class="container">
-        <h1>Реєстрація</h1>
+    <section class="row-alt">
+        <div class="lead container">
+            <h1>Реєстрація</h1>
+            <p>Щороку ми прагнемо неймовірно провести час
+                і в цьому році ми хотіли б щоб ви приєдналися до нас.
+                Вхід на конференцію коштує всього лише 99$ і це одна
+                з кращих інвестицій у ваші знання.</p>
+        </div>
     </section>
 
 <footer class="primary-footer container group">
