--- a/schedule.html
+++ b/schedule.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<header class="container group">
+<header class="primary-header container group">
     <h1 class="logo">
         <a href="index.html">Styles <br> Conference</a>
     </h1>
@@ -22,8 +22,13 @@
         <a href="register.html">Реєстрація</a>
     </nav>
 
-    <section class="container">
-        <h1>Розклад</h1>
+    <section class="row-alt">
+        <div class="lead container">
+            <h1>Розклад</h1>
+            <p>Конференція відкривається дивовижними семінарами
+                і впродовж двох днів триватимуть неймовірні спікінги і презентації,
+                які проводитимуть провідні фахівці галузі.</p>
+        </div>
     </section>
 
 <footer class="primary-footer container group">
