--- a/speakers.html
+++ b/speakers.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<header class="container group">
+<header class="primary-header container group">
     <h1 class="logo">
         <a href="index.html">Styles <br> Conference</a>
     </h1>
@@ -22,8 +22,14 @@
         <a href="register.html">Реєстрація</a>
     </nav>
 
-    <section class="container">
-        <h1>Спікери</h1>
+
+    <section class="row-alt">
+        <div class="lead container">
+            <h1>Спікери</h1>
+            <p>Ми раді вітати більше двадцяти спікерів,
+                готових представити новітні технології
+                в галузі. Готуйтеся до феєрії.</p>
+        </div>
     </section>
 
 <footer class="primary-footer container group">
