--- a/venue.html
+++ b/venue.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<header class="container group">
+<header class="primary-header container group">
     <h1 class="logo">
         <a href="index.html">Styles <br> Conference</a>
     </h1>
@@ -22,8 +22,13 @@
         <a href="register.html">Реєстрація</a>
     </nav>
 
-    <section class="container">
-        <h1>Місце проведення</h1>
+    <section class="row-alt">
+        <div class="lead container">
+            <h1>Місце проведення</h1>
+            <p>Конференція відбудеться в театрі Чикаго - красивій історичній
+                пам'ятці архітектури. Готель для учасників конференції розташований
+                у декількох хвилинах ходьби вниз по Стейт-Стріт.</p>
+        </div>
     </section>
 
 <footer class="primary-footer container group">
