--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
 
     <nav class="nav primary-nav">
-        <a href="index.html">Головна</a>
-        <a href="speakers.html">Спікери</a>
-        <a href="schedule.html">Розклад</a>
-        <a href="venue.html">Місце проведення</a>
-        <a href="register.html">Реєстрація</a>
+      <ul>
+        <li><a href="index.html">Головна</a></li><!--
+        --><li><a href="speakers.html">Спікери</a></li><!--
+        --><li><a href="schedule.html">Розклад</a></li><!--
+        --><li><a href="venue.html">Місце проведення</a></li><!--
+        --><li><a href="register.html">Реєстрація</a></li>
+      </ul>
     </nav>
 </header>
 
@@ -74,11 +76,13 @@
 <footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
 		<nav class="nav">
-			<a href="index.html">Головна</a>
-			<a href="speakers.html">Спікери</a>
-			<a href="schedule.html">Розклад</a>
-			<a href="venue.html">Місце проведення</a>
-			<a href="register.html">Реєстрація</a>
+			<ul>
+        <li><a href="index.html">Головна</a></li><!--
+			  --><li><a href="speakers.html">Спікери</a></li><!--
+			  --><li><a href="schedule.html">Розклад</a></li><!--
+			  --><li><a href="venue.html">Місце проведення</a></li><!--
+			  --><li><a href="register.html">Реєстрація</a></li>
+      </ul>
 		</nav>
 	</footer>
 
