--- a/speakers.html
+++ b/speakers.html
@@ -15,11 +15,13 @@
     <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
 
     <nav class="nav primary-nav">
-        <a href="index.html">Головна</a>
-        <a href="speakers.html">Спікери</a>
-        <a href="schedule.html">Розклад</a>
-        <a href="venue.html">Місце проведення</a>
-        <a href="register.html">Реєстрація</a>
+        <ul>
+            <li><a href="index.html">Головна</a></li><!--
+            --><li><a href="speakers.html">Спікери</a></li><!--
+            --><li><a href="schedule.html">Розклад</a></li><!--
+            --><li><a href="venue.html">Місце проведення</a></li><!--
+            --><li><a href="register.html">Реєстрація</a></li>
+        </ul>
     </nav>
 
 
@@ -32,14 +34,94 @@
         </div>
     </section>
 
+    <section class="row">
+        <div class="grid">
+
+            <section class="speaker" id="chris-mills">
+
+                <div class="col-2-3">
+
+                    <h2>Кріс Мілс</h2>
+                    <h5>Хеві-метал кодинг</h5>
+
+                    <p>У цій нетрадиційній розмові Кріс Мілс буде заохочувати вас
+                        взяти барабанні палички на додаток до ноутбука і вибивати
+                        ритм навчання - і коду і барабанів! Ви дізнаєтеся основи
+                        JavaScript і CSS, а також про барабанні патерни хеві-метала.
+                        Цей шлюб укладений на небесах і немає кращої протиотрути від
+                        розчарування коду, ніж вибивання семи відтінків ***** на
+                        барабанній установці.</p>
+
+                    <h5>Про спікера</h5>
+
+                    <p>Кріс Мілс, старший технічний розробник в Mozilla,
+                        де він пише документацію і демонстрації про відкриті веб-додатки,
+                        Firefox OS і пов'язані з ними теми. Він любить майструвати на HTML,
+                        CSS, JavaScript та інших веб-технологіях і зрідка виступає на конференціях
+                        і в університетах.</p>
+
+                </div><!--
+
+        --><aside class="col-1-3">
+                <div class="speaker-info">
+
+                    <ul>
+                        <li><a href="https://twitter.com/chrisdavidmills">@chrisdavidmills</a></li>
+                        <li><a href="https://developer.mozilla.org/">developer.mozilla.org</a></li>
+                    </ul>
+
+                </div>
+            </aside>
+
+            </section>
+
+            <section class="speaker" id="shay-howe">
+
+                <div class="col-2-3">
+
+                    <h2>Шей Хоу</h2>
+                    <h5>Краще менше, та краще: як обмеження культивують зростання</h5>
+
+                    <p>Встановлюючи обмеження, ми змушуємо себе бути більш продуктивними.
+                        Вони допомагають нам приймати рішення, зосереджуючись на проблемі,
+                        яку ми намагаємося вирішити. Вони покращують нашу цілісність, яка
+                        забезпечує кращий досвід для наших користувачів. І вони допомагають
+                        нам зростати - цінний актив за часів інновацій.</p>
+
+                    <h5>Про спікера</h5>
+
+                    <p>Як дизайнер і фронтенд-розробник, Шей Хоу відчуває пристрасть до вирішення
+                        проблем при створенні творчих і інтуїтивних продуктів. Шей спеціалізується
+                        на дизайні і розробці інтерфейсу.</p>
+
+                </div><!--
+
+        --><aside class="col-1-3">
+                <div class="speaker-info">
+
+                    <ul>
+                        <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
+                        <li><a href="http://learn.shayhowe.com/">learn.shayhowe.com</a></li>
+                    </ul>
+
+                </div>
+            </aside>
+
+            </section>
+
+        </div>
+    </section>
+
 <footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
     <nav class="nav">
-        <a href="index.html">Головна</a>
-        <a href="speakers.html">Спікери</a>
-        <a href="schedule.html">Розклад</a>
-        <a href="venue.html">Місце проведення</a>
-        <a href="register.html">Реєстрація</a>
+        <ul>
+            <li><a href="index.html">Головна</a></li><!--
+			      --><li><a href="speakers.html">Спікери</a></li><!--
+			      --><li><a href="schedule.html">Розклад</a></li><!--
+			      --><li><a href="venue.html">Місце проведення</a></li><!--
+			      --><li><a href="register.html">Реєстрація</a></li>
+        </ul>
     </nav>
 </footer>
 </body>
