--- a/speakers.html
+++ b/speakers.html
@@ -30,7 +30,7 @@
             <h1>Спікери</h1>
             <p>Ми раді вітати більше двадцяти спікерів,
                 готових представити новітні технології
-                в галузі. Готуйтеся до феєрії.</p>
+                в галузі. Готуйтесь до феєрії.</p>
         </div>
     </section>
 
@@ -64,6 +64,8 @@
 
         --><aside class="col-1-3">
                 <div class="speaker-info">
+
+                    <img src="assets/images/speakers/chris-mills.jpg" alt="Chris Mills">
 
                     <ul>
                         <li><a href="https://twitter.com/chrisdavidmills">@chrisdavidmills</a></li>
@@ -99,6 +101,8 @@
         --><aside class="col-1-3">
                 <div class="speaker-info">
 
+                    <img src="assets/images/speakers/shay-howe.jpg" alt="Shay Howe">
+
                     <ul>
                         <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
                         <li><a href="http://learn.shayhowe.com/">learn.shayhowe.com</a></li>
@@ -111,18 +115,21 @@
 
         </div>
     </section>
+</header>
 
 <footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
     <nav class="nav">
         <ul>
             <li><a href="index.html">Головна</a></li><!--
-			      --><li><a href="speakers.html">Спікери</a></li><!--
-			      --><li><a href="schedule.html">Розклад</a></li><!--
-			      --><li><a href="venue.html">Місце проведення</a></li><!--
-			      --><li><a href="register.html">Реєстрація</a></li>
+            --><li><a href="speakers.html">Спікери</a></li><!--
+            --><li><a href="schedule.html">Розклад</a></li><!--
+            --><li><a href="venue.html">Місце проведення</a></li><!--
+            --><li><a href="register.html">Реєстрація</a></li>
         </ul>
     </nav>
 </footer>
+
 </body>
+
 </html>
