--- a/venue.html
+++ b/venue.html
@@ -8,42 +8,44 @@
 </head>
 
 <body>
-<header class="primary-header container group">
-    <h1 class="logo">
-        <a href="index.html">Styles <br> Conference</a>
-    </h1>
-    <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
+    <header class="primary-header container group">
+        <h1 class="logo">
+            <a href="index.html">Styles <br> Conference</a>
+        </h1>
+        <h3 class="tagline">24&ndash;26 серпня &mdash; штат Ілліно́йс, Чикаго</h3>
 
-    <nav class="nav primary-nav">
-        <ul>
-            <li><a href="index.html">Головна</a></li><!--
-            --><li><a href="speakers.html">Спікери</a></li><!--
-            --><li><a href="schedule.html">Розклад</a></li><!--
-            --><li><a href="venue.html">Місце проведення</a></li><!--
-            --><li><a href="register.html">Реєстрація</a></li>
-        </ul>
-    </nav>
+        <nav class="nav primary-nav">
+            <ul>
+                <li><a href="index.html">Головна</a></li><!--
+                --><li><a href="speakers.html">Спікери</a></li><!--
+                --><li><a href="schedule.html">Розклад</a></li><!--
+                --><li><a href="venue.html">Місце проведення</a></li><!--
+                --><li><a href="register.html">Реєстрація</a></li>
+            </ul>
+        </nav>
 
-    <section class="row-alt">
-        <div class="lead container">
-            <h1>Місце проведення</h1>
-            <p>Конференція відбудеться в театрі Чикаго - красивій історичній
+        <section class="row-alt">
+            <div class="lead container">
+                <h1>Місце проведення</h1>
+                <p>Конференція відбудеться в театрі Чикаго - красивій історичній
                 пам'ятці архітектури. Готель для учасників конференції розташований
                 у декількох хвилинах ходьби вниз по Стейт-Стріт.</p>
-        </div>
-    </section>
+            </div>
+        </section>
+    </header>
 
-<footer class="primary-footer container group">
-    <small>&copy; Styles Conference</small>
-    <nav class="nav">
-        <ul>
-            <li><a href="index.html">Головна</a></li><!--
-			      --><li><a href="speakers.html">Спікери</a></li><!--
-			      --><li><a href="schedule.html">Розклад</a></li><!--
-			      --><li><a href="venue.html">Місце проведення</a></li><!--
-			      --><li><a href="register.html">Реєстрація</a></li>
-        </ul>
-    </nav>
-</footer>
+    <footer class="primary-footer container group">
+        <small>&copy; Styles Conference</small>
+        <nav class="nav">
+            <ul>
+             <li><a href="index.html">Головна</a></li><!--
+			          --><li><a href="speakers.html">Спікери</a></li><!--
+			          --><li><a href="schedule.html">Розклад</a></li><!--
+			          --><li><a href="venue.html">Місце проведення</a></li><!--
+			          --><li><a href="register.html">Реєстрація</a></li>
+            </ul>
+        </nav>
+    </footer>
+
 </body>
 </html>
