--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
       <section class="teaser col-1-3">
         <a href="speakers.html">
+          <img src="assets/images/home/speakers.jpg" alt="Професійні спікери">
             <h5>Спікери</h5>
             <h3>Спікери світового рівня</h3>
         </a>
@@ -53,6 +54,7 @@
 
         --><section class="teaser col-1-3">
         <a href="schedule.html">
+          <img src="assets/images/home/schedule.jpg" alt="Учасники конференції">
             <h5>Розклад</h5>
             <h3>Три незабутніх дні спілкування</h3>
         </a>
@@ -64,6 +66,7 @@
 
         --><section class="teaser col-1-3">
         <a href="venue.html">
+          <img src="assets/images/home/venue.jpg" alt="Театр Чикаго">
             <h5>Місце проведення</h5>
             <h3>Театр Чикаго</h3>
         </a>
