--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<header class="primary-header container group">
+  <header class="primary-header container group">
     <h1 class="logo">
         <a href="index.html">Styles <br> Conference</a>
     </h1>
@@ -33,8 +33,9 @@
                 з кращих інвестицій у ваші знання.</p>
         </div>
     </section>
+  </header>
 
-<footer class="primary-footer container group">
+  <footer class="primary-footer container group">
     <small>&copy; Styles Conference</small>
     <nav class="nav">
         <ul>
@@ -45,6 +46,7 @@
 			      --><li><a href="register.html">Реєстрація</a></li>
         </ul>
     </nav>
-</footer>
+  </footer>
+
 </body>
 </html>
